@@ -26,7 +26,7 @@ WriteMakefile(
   NAME              => 'SPVM::IO',
   VERSION_FROM      => 'lib/SPVM/IO.pm', # finds $VERSION
   PREREQ_PM         => {}, # e.g., Module::Name => 1.1
-  LICENSE           => 'perl_5',
+  LICENSE           => 'mit',
   ($] >= 5.005 ?     ## Add these new keywords supported since 5.005
     (ABSTRACT_FROM  => 'lib/SPVM/IO.pm', # retrieve abstract from module
      AUTHOR         => 'Yuki Kimoto<kimoto.yuki@gmail.com>') : ()),
