@@ -1,3 +1,6 @@
+# Copyright (c) 2023 Yuki Kimoto
+# MIT License
+
 class IO::File extends IO::Handle {
   use Sys::IO;
   use Fn;
