@@ -1,3 +1,6 @@
+# Copyright (c) 2023 Yuki Kimoto
+# MIT License
+
 class IO::Socket extends IO::Handle {
   use Sys::Socket;
   use Sys::Socket::Constant as SOCKET;
