@@ -1,3 +1,6 @@
+# Copyright (c) 2023 Yuki Kimoto
+# MIT License
+
 class IO::Socket::INET extends IO::Socket {
   use Sys::Socket::Constant as SOCKET;
   use Sys::Socket::Sockaddr;
